--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
       - backend
     working_dir: /app
     environment:
-      - VITE_API_BASE_URL=http://jola197.mikrus.xyz:30197
+      # - VITE_API_BASE_URL=http://jola197.mikrus.xyz:30197
+      VITE_API_BASE_URL=https://api.domatormyszyniec.pl
       # volumes:
       # - ./my-app:/my-app
   db:
