--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
     "bootstrap": "^5.3.8",
+    "dompurify": "^3.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-quill-new": "^3.7.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
