Fix in  changes in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,8 @@ services:
     depends_on:
       - backend
     working_dir: /app
-    # environment:
-    #   - VITE_API_BASE_URL=https://api.domatormyszyniec.pl
+    environment:
+      - VITE_API_BASE_URL=https://api.domatormyszyniec.pl
 
   db:
     image: postgres:16
