Fix in  changes in docker-compose.yml 2, delete migrate_ceneo_fields.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     working_dir: /app
     volumes:
       - ./src:/app/src
-      - ./requirements.txt:/app/requirements.txt
+      # - ./requirements.txt:/app/requirements.txt
     extra_hosts:
       - "host.docker.internal:host-gateway"
   frontend:
